--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <!-- Step 3: Coordonnées -->
         <div class="card" id="card-info" style="margin-top:16px;display:none" aria-labelledby="indicator-3">
           <h2>3 — Renseignez vos informations</h2>
-          <form action="https://formspree.io/f/xxxxxxx" method="POST">
+          <form action="https://formspree.io/f/xeolnppw" method="POST">
   <label for="nom">Nom complet</label>
   <input type="text" name="nom" id="nom" required placeholder="Prénom Nom">
 
@@ -427,4 +427,5 @@
   </script>
 </body>
 </html>
+
 
