--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
+<script>
+  (function(){
+    emailjs.init("VOTRE_PUBLIC_KEY"); // clé publique trouvée dans EmailJS
+  })();
+</script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Réservation DJ — Formulaire</title>
@@ -427,5 +434,6 @@
   </script>
 </body>
 </html>
+
 
 
