--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
 <script>
   (function(){
-    emailjs.init("VOTRE_PUBLIC_KEY"); // clé publique trouvée dans EmailJS
+    emailjs.init("eMji0_caM9w6gI4Us"); // clé publique trouvée dans EmailJS
   })();
 </script>
 
@@ -434,6 +434,7 @@
   </script>
 </body>
 </html>
+
 
 
 
